# wsl-dock

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  Taskfile.yml  build.zig  build.zig.zon  compile_flags.txt  mise.toml  package.json  resource.rc
.opencode/commands/: bump-version.md
scripts/: prepare-release.ts
src/: app_state.h  config.c  config.h  main.c  tray.c  tray.h  wsl.c  wsl.h
